# django-integrity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mypy-ratchet.json  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: checks.yaml  release-to-pypi.yaml  tests.yaml
requirements/: development.txt  prerequisites.txt  pytest-in-tox.txt  release.txt  tox.txt
scripts/: type-ratchet.py  verify-version-tag.py
src/django_integrity/: __init__.py  constraints.py  conversion.py
tests/: conftest.py
tests/django_integrity/: test_constraints.py  test_conversion.py  test_package.py
tests/example_app/: models.py  settings.py
